New, third chapter.
This chapters deals with variable, constants and basic maths.
It also contains a short introduction to functions, from the user point of view.

--- a/Conf.tex
+++ b/Conf.tex
@@ -4,7 +4,7 @@
 \usepackage[francais]{babel}
 \usepackage{fontspec} % Required by french.
 %\usepackage[T1]{fontenc}
-\usepackage{amsmath}
+\usepackage{mathtools}
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage[left=2cm,right=2cm,top=2cm,bottom=2cm]{geometry}
