Correct two omissions in chapter 3, and Xcode bad formatting in chapter 2.

--- a/P1/CH2/CH2.tex
+++ b/P1/CH2/CH2.tex
@@ -1,12 +1,12 @@
-\chapter{Découvrons Xcode}
+\chapter{Découvrons XCode}
 Dans cette parte nous allons installer et découvrir l'IDE d’Apple, puis découvrir notre
 première ligne de code.
-\section{Installation de Xcode}
+\section{Installation de XCode}
 L'installation de cet outil est plutôt facile, puisqu’il est disponible depuis le Mac app Store,
 gratuitement. On peux aussi le télécharger depuis le site des développeurs Apple. Il faut
 cependant s'inscrire en tant que développeur avec son Apple ID, gratuitement, pour
-accéder aux divers ressource, dont la documentation, je vous recommande donc de le
-faire.
+accéder aux divers ressource, dont la documentation,
+je vous recommande donc de le faire.
 (Attention , les programmes payants ne sont pas nécessaires, il servent juste à pouvoir
 soumettre des applications sur les App Store, et pouvoir signer son code, pour la
 distribution via internet)
@@ -15,15 +15,15 @@ verrez l'application apparaitre dans votre dossier application.
 \begin{figure}[h]
 \centering
 \includegraphics[scale=0.30]{\TSwiftRoot/P1/CH2/img/Launchpad}
-\caption{L'icône de Xcode dans la pile Applications}
+\caption{L'icône de XCode dans la pile Applications}
 \end{figure}
 
 \section{Premier contact avec Swift, un Playground}
-Ouvrez Xcode. Vous devez voir apparaitre cette fenêtre, à la colonne de droite près.
+Ouvrez XCode. Vous devez voir apparaitre cette fenêtre, à la colonne de droite près.
 \begin{figure}[h]
 \centering
 \includegraphics[scale=0.5]{\TSwiftRoot/P1/CH2/img/XCodeWindow}
-\caption{Fenêtre d'accueil de Xcode}
+\caption{Fenêtre d'accueil de XCode}
 \end{figure}
 
 Cliquez sur << Get started with a playground >>, pour créer un nouveau playground.
@@ -73,7 +73,7 @@ Vous pouvez remplacer le texte entre guillemet par le texte que vous voulez.
 Cette ligne de code correspond à une \emph{instruction}.
 Il est possible de mettre \emph{plusieurs} instructions par lignes à condition de laes séparer par des points virgule\verb";".
 
-Un playground est un outil très puissant de Xcode puisqu’il permet de voir immédiatement
+Un playground est un outil très puissant de XCode puisqu’il permet de voir immédiatement
 les conséquences d’une modification du code.
 \section{Les Commentaires}
 Un commentaire permet à l’auteur du code d’expliquer ce qu’il fait, ou plus généralement
@@ -107,12 +107,12 @@ println("Hello, playground") // Comme ici.
 println(/*Texte ici*/"Bonjour, bac à sable") // Parce qu'en Français c'est mieux.
 \end{minted}
 \end{listing}
-Remarquez que Xcode colore les commentaires d'une couleur particulière (chez moi, le vert).
+Remarquez que XCode colore les commentaires d'une couleur particulière (chez moi, le vert).
 \section{Un quasi-interpréteur : La REPL Swift}
 Le playground, est un outil très puissant puisqu’il compile et exécute immédiatement
 chacune de vos instructions.
 
-En arrière plan, Xcode compile automatiquement votre programme, et utilise le debugger
+En arrière plan, XCode compile automatiquement votre programme, et utilise le debugger
 pour obtenir l’état du programme après chaque instruction.
 
 Il existe une autre façon de jouer avec Swift, un peu moins jolie mais encore plus rapide
