--- a/P1/CH5/CH5.tex
+++ b/P1/CH5/CH5.tex
@@ -60,10 +60,23 @@ Faux & Faux & Faux \\ \hline
 \end{tabu}
 \caption{La disjonction}
 \end{table}
-%\subsubsection{Les lois de Morgan}
-%Todo
-%\subsubsection{Distributivité}
-%Todo
+\subsubsection{Les lois de Morgan}
+Dans cette section, nous allons aborder la négation respective d'une conjonction et d'une disjonction.
+
+On a non$(A$ et $B) = $non$(A)$ ou non$(B)$,
+et non$(A$ ou $B) = $non$(A)$ et non$(B)$.
+
+\subsubsection{Distributivité}
+Comme avec certaines opérations mathématiques, il est possible de distribuer et de factoriser des expressions logiques.
+
+La conjonction est \emph{distributive} par rapport à la disjonction :
+
+$A$ et $(B$ ou $C) = $(A$ et $B)$ ou $(A$ et $C)$
+
+Et la disjonction est aussi distributive par rapport à la conjonction :
+
+$A$ ou $(B$ et $C) = $(A$ ou $B)$ et $(A$ ou $C)$
+
 \subsection{Les opérateurs booléens en pratique}
 \subsubsection{La négation}
 \subsubsection{La conjonction}
