Update CH6.tex : While loop.

--- a/P1/CH6/CH6.tex
+++ b/P1/CH6/CH6.tex
@@ -2,6 +2,16 @@
 Dans ce chapitre, nous allons voir comment
 répéter des instructions un nombre variable de fois.
 \section{La boucle While}
+Cette première boucle permet de répéter un groupe d'instruction tant qu'une condition est vérifié (ou que sa négation n'est pas vérifiée.).
+
+\begin{listing}[h]
+\begin{minted}[linenos]{swift}
+while <condition> {
+    // code à exécuter.
+}
+\end{minted}
+\caption{Syntaxe de la boucle While.}
+\end{listing}
 \section{Énumérons des entiers, la boucle for in}
 \section{Seconde syntaxe de la boucle for}
 \section{Application : Copions des lignes}
