--- a/P1/P1.tex
+++ b/P1/P1.tex
@@ -7,3 +7,5 @@ fonctionnelle et acquérir les bases de l’algorithmie.
 \input{\TSwiftRoot/P1/CH2/CH2}
 \input{\TSwiftRoot/P1/CH3/CH3}
 \input{\TSwiftRoot/P1/CH4/CH4}
+\input{\TSwiftRoot/P1/CH5/CH5}
+\input{\TSwiftRoot/P1/CH6/CH6}
